Fixes bug so header logos do not stretch across screen on iphones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -550,10 +550,12 @@ footer p {
 
     #watch-logo {
         width: 62%;
+        height: 10vw
     }
     
     #nhs-logo {
         width: 15%;
+        height: 7vw;
     }
 
     #pre-footer img {
